# llm-d-benchmark

./: .dockerignore  .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  .pre-commit_requirements.txt  .secrets.baseline  :  CONTRIBUTING.md  Makefile  OWNERS  README.md  SECURITY.md  _typos.toml  install.sh  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
analysis/: analysis.ipynb  benchmark_report  config_explorer  constants.py  guidellm-analyze_results.sh  inference-perf-analyze_results.sh  inferencemax-analyze_results.sh  nop-analyze_results.py  visualize_metrics.py  vllm-benchmark-analyze_results.sh
benchmark_report/: Makefile  README.md  __init__.py  base.py  br_v0_1_example.yaml  br_v0_2_example.yaml  br_v0_2_json_schema.json  cli.py  core.py  metrics_processor.py  native_to_br.py  native_to_br0_1.py  native_to_br0_2.py  schema_v0_1.py  schema_v0_2.py  schema_v0_2_components.py
config/: README.md
config_explorer/: Capacity_Planner.py  README.md  empirical-vllm-memory-results.md  gpu_costs.json  pyproject.toml  requirements-streamlit.txt  requirements.txt  util.py
docs/: analysis.md  benchmark_report.md  developer-guide.md  doe.md  faq.md  lifecycle.md  metrics_collection.md  observability.md  quickstart.md  reproducibility.md  resource_requirements.md  run.md  standup.md  upstream-versions.md  workload-variant-autoscaler.md
existing_stack/: config_template.yaml  prepare.sh  run_only.sh
experiments/: inference-scheduling.yaml  pd-disaggregation.yaml  precise-prefix-cache-aware.yaml  tiered-prefix-cache.yaml
kubecon2025/: README.md
(+446 files in other folders)
